# datascience_starter_project

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  template.env
.github/ISSUE_TEMPLATE/: template_feature_request.yml
.github/workflows/: base.yml  build_course.yml  cleanup.yml
apps/: main.py
apps/models/: README.md
apps/models/jules_model_1/: main.py
apps/website/: README.md
assets/: README.md
assets/templates/: model_template.py
data/: README.md
documentation/: README.md  best_practices.md  git_github_workflow.md  project_refactoring.md
documentation/book/: _config.yml  _toc.yml
documentation/book/_static/: course.css
documentation/book/pages/: intro.md
documentation/book/pages/annexes/: code_samples.md  links.md
documentation/book/pages/project/github_advanced/: ci_cd.md  docker_and_docker_compose.md  github_pages.md  github_registry.md  monorepos.md  project_advanced.md
documentation/book/pages/project/github_project/: branches.md  commits.md  dashboard.md  github.md  new_project.md  workflow.md
documentation/book/pages/python/project_structure/: architecture.md  makefile.md  package_vs_app.md  project_structure.md
documentation/book/pages/python/python_advanced/: cli.md  code_quality.md  logs.md  vscode.md  (+2 more)
notebooks/: README.md
package/: __init__.py
package/cli/: README.md  cli_main.py
package/config/: README.md  environment.py  logger.py
package/data/: README.md  database.py  loader.py  preprocessing.py
package/measures/: README.md
package/models/: README.md
scripts/: README.md
tests/: README.md
(+17 files in other folders)
